--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
+# Arquivos de objeto e binários
+*.o
+*.obj
+*.exe
+*.dll
+*.so
+*.dylib
+*.out
+
+# Pastas de build
+build/
+cmake-build-debug/
+cmake-build-release/
+
+# Arquivos e Pastas do Sistema/IDE
+.idea/
+*.swp
+*~
+.DS_Store
+
+# Logs e arquivos temporários
+*.log
+*.tmp
+*.temp
